[package]
name = "pcaparse"
edition = "2021"
version = "0.1.1"
authors = ["julian <traceflight@outlook.com>"]
description = "A crate to parse, read and write Pcap and PcapNg"

license = "MIT"
documentation = "https://docs.rs/pcaparse/"
repository = "https://github.com/traceflight/pcaparse"
readme = "README.md"
keywords = ["pcap", "pcapng", "parse", "read", "write"]
categories = ["encoding", "parsing"]

exclude = ["benches/bench.pcap", "benches/bench.pcapng", "fuzz", "tests"]


[dependencies]
async-trait = "0.1.74"
byteorder = "1.5.0"
derive-into-owned = "0.2.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", optional = true }
tokio-byteorder = { version = "0.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "net",
] }
tokio-test = "0.4.3"
criterion = "0.4.0"
glob = "0.3.0"
hex = "0.4.3"

[[bench]]
name = "benches"
harness = false

[profile.bench]
lto = "fat"

[features]
tokio = ["dep:tokio", "tokio-byteorder"]
