[package]
name = "pcaparse"
edition = "2021"
version = "0.1.3"
authors = ["julian <traceflight@outlook.com>"]
description = "A crate to parse, read and write Cap(NA Sniffer 2.x), Pcap and PcapNg"

license = "MIT"
documentation = "https://docs.rs/pcaparse/"
repository = "https://github.com/traceflight/pcaparse"
readme = "README.md"
keywords = ["pcap", "pcapng", "cap", "parse", "write"]
categories = ["encoding", "parsing"]

exclude = [
    "benches/bench.pcap",
    "benches/bench.pcapng",
    "benches/bench.cap",
    "fuzz",
    "tests",
]


[dependencies]
async-trait = { version = "0.1.74", optional = true }
byteorder = "1.5.0"
derive-into-owned = "0.2.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", optional = true }
tokio-byteorder = { version = "0.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "net",
] }
tokio-test = "0.4.3"
criterion = "0.4.0"
glob = "0.3.0"
hex = "0.4.3"

[[bench]]
name = "benches"
harness = false

[profile.bench]
lto = "fat"

[features]
tokio = ["async-trait", "dep:tokio", "tokio-byteorder"]
